# RangeSelector

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  test.rs
src-tauri/src/commands/: capture_cmd.rs  history_cmd.rs  mod.rs  ocr_cmd.rs
src-tauri/src/models/: history.rs  mod.rs  state.rs
src-tauri/src/services/: capture.rs  history.rs  mod.rs
src-tauri/src/utils/: path.rs
src/components/: TitleBar.tsx
src/components/canvas/: OcrHighlightLayer.tsx  OcrOverlay.tsx  OcrTextLayer.tsx
src/components/common/: IconButton.tsx  NotificationItem.tsx  NotificationProvider.tsx  Slider.tsx  Tooltip.tsx  TooltipProvider.tsx
src/components/overlays/: GlobalOverlay.tsx
src/components/toolbar/: ColorPalette.tsx  FloatingToolbar.tsx
src/core/: types.ts
src/core/canvas/: CanvasEngine.ts  EraserTool.ts  HistoryManager.ts  InputController.ts  PenTool.ts  Renderer.ts  ToolAction.ts  (+2 more)
src/hooks/: useCanvasDrawing.ts  useCustomSelectionEngine.ts  useOcrDataTransformer.ts
src/providers/: AppProvider.tsx  NotificationProvider.tsx  TooltipProvider.tsx
src/services/: CaptureService.ts  ClipboardService.ts  HistoryService.ts  OcrService.ts  ShortcutService.ts  TauriService.ts  WindowService.ts  WorkspaceService.ts
src/store/: useAppStore.ts  useOcrStore.ts  useUIStore.ts
src/types/: history.ts  index.ts
src/utils/: canvasUtils.ts
src/windows/: HistoryWindow.tsx  MainWindow.tsx  SelectionWindow.tsx
(+7 files in other folders)
